@@ -45,16 +45,106 @@ public final class PlannerRequest {
          *  {@link AggFn#COUNT} today; rendered as {@code count(distinct x)}).
          *  Added for cardinality-probe dispatch (Task C). */
         public final boolean distinct;
+        /** When non-null, the measure aggregates this literal value
+         *  instead of a column reference. Used by the CalcitePlannerAdapters
+         *  segment-load translator for calc-columns that resolve to a
+         *  constant (e.g. {@code <CalculatedColumnDef>} with SQL just
+         *  {@code 0} / {@code NULL}). The {@link #column} alias is still
+         *  used as the result alias; the {@code column.name} is ignored.
+         *  Sentinel value {@link #NULL_LITERAL} represents SQL NULL —
+         *  distinct from "no literal set" (this field == null). */
+        public final Object literal;
+        /** When non-null, the measure aggregates a structured CASE
+         *  expression instead of a column reference. Used for
+         *  calc-column measures like FoodMart's Promotion Sales:
+         *  {@code case when promotion_id = 0 then 0 else store_sales end}.
+         *  Mutually exclusive with {@link #literal}. */
+        public final CaseExpr caseExpr;
+        /** When non-null, the measure aggregates a structured binary
+         *  arithmetic expression ({@code lhsCol &lt;op&gt; rhsCol}).
+         *  Covers calc-column measures like FoodMart's warehouse_profit
+         *  ({@code warehouse_sales - warehouse_cost}). Mutually
+         *  exclusive with {@link #literal} and {@link #caseExpr}. */
+        public final ArithExpr arithExpr;
+        /** Sentinel value used in {@link #literal} to represent SQL NULL,
+         *  distinguishing it from the field being unset (which is also
+         *  Java null). */
+        public static final Object NULL_LITERAL = new Object();
         public Measure(AggFn fn, Column column, String alias) {
-            this(fn, column, alias, false);
+            this(fn, column, alias, false, null, null, null);
         }
         public Measure(
             AggFn fn, Column column, String alias, boolean distinct)
+        {
+            this(fn, column, alias, distinct, null, null, null);
+        }
+        public Measure(
+            AggFn fn, Column column, String alias, boolean distinct,
+            Object literal)
+        {
+            this(fn, column, alias, distinct, literal, null, null);
+        }
+        public Measure(
+            AggFn fn, Column column, String alias, boolean distinct,
+            Object literal, CaseExpr caseExpr)
+        {
+            this(fn, column, alias, distinct, literal, caseExpr, null);
+        }
+        public Measure(
+            AggFn fn, Column column, String alias, boolean distinct,
+            Object literal, CaseExpr caseExpr, ArithExpr arithExpr)
         {
             this.fn = fn;
             this.column = column;
             this.alias = alias;
             this.distinct = distinct;
+            this.literal = literal;
+            this.caseExpr = caseExpr;
+            this.arithExpr = arithExpr;
+        }
+    }
+
+    /** Binary arithmetic operator for {@link ArithExpr}. */
+    public enum ArithOp { PLUS, MINUS, TIMES, DIVIDE }
+
+    /** Structured binary arithmetic descriptor used by
+     *  {@link Measure#arithExpr}: {@code lhsCol <op> rhsCol}. Covers
+     *  the canonical FoodMart warehouse_profit shape
+     *  ({@code warehouse_sales - warehouse_cost}). */
+    public static final class ArithExpr {
+        public final Column lhsCol;
+        public final ArithOp op;
+        public final Column rhsCol;
+        public ArithExpr(Column lhsCol, ArithOp op, Column rhsCol) {
+            this.lhsCol = lhsCol;
+            this.op = op;
+            this.rhsCol = rhsCol;
+        }
+    }
+
+    /**
+     * Structured CASE expression descriptor used by
+     * {@link Measure#caseExpr}.
+     *
+     * <p>Covers the canonical FoodMart Promotion Sales shape:
+     * {@code case when whenCol = whenLiteral then thenLiteral
+     * else elseCol end}. More general CASE shapes (multi-WHEN,
+     * column-vs-column, expression operands) are deferred — the
+     * shape here is exactly what the corpus exercises.
+     */
+    public static final class CaseExpr {
+        public final Column whenCol;
+        public final Object whenLiteral;
+        public final Object thenLiteral;
+        public final Column elseCol;
+        public CaseExpr(
+            Column whenCol, Object whenLiteral,
+            Object thenLiteral, Column elseCol)
+        {
+            this.whenCol = whenCol;
+            this.whenLiteral = whenLiteral;
+            this.thenLiteral = thenLiteral;
+            this.elseCol = elseCol;
         }
     }
 
@@ -62,8 +152,11 @@ public final class PlannerRequest {
 
     /** HAVING comparison operator set — the binary-compare subset the
      *  corpus exercises for {@code RolapNativeFilter$FilterConstraint}.
-     *  Added for Task P. */
-    public enum Comparison { GT, LT, GE, LE, EQ, NE }
+     *  Added for Task P. {@code IS_NULL} and {@code IS_NOT_NULL} are
+     *  unary on the measure side; the {@code Having.literal} field is
+     *  ignored in those cases (use any non-null placeholder, e.g.
+     *  {@link Boolean#TRUE}, to satisfy the constructor invariant). */
+    public enum Comparison { GT, LT, GE, LE, EQ, NE, IS_NULL, IS_NOT_NULL }
 
     /**
      * HAVING predicate: {@code <measure> <op> <literal>}. Used for
@@ -106,7 +199,11 @@ public final class PlannerRequest {
         public Filter(Column column, Operator op, List<Object> literals) {
             this.column = column;
             this.op = op;
-            this.literals = List.copyOf(literals);
+            // Defensive copy that tolerates null elements — a null
+            // literal represents a SQL NULL match (rendered as IS NULL
+            // downstream). List.copyOf / List.of reject nulls.
+            this.literals = java.util.Collections.unmodifiableList(
+                new java.util.ArrayList<>(literals));
             if (op == Operator.EQ && this.literals.size() != 1) {
                 throw new IllegalArgumentException(
                     "EQ filter requires exactly one literal; got "
